feature: Start Django Server project

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ file_path.txt
 
 .ipynb_checkpoints/around_the_world_classifier-checkpoint.ipynb
 .ipynb_checkpoints/around_the_world_classifier_imac-checkpoint.ipynb
+images.html
+images.xlsx
